# Audio_processing_C

./: CMakeLists.txt  Readme.md
AudioLibrary/: cmake_test.c  main.c
AudioLibrary/src/: main.h  sample.c
src/: main.c
